--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,33 @@
-pandas>=1.3.0,<2.0.0
-numpy>=1.21.0,<2.0.0
-matplotlib>=3.3.0
-seaborn>=0.11.0
-scipy>=1.7.0
-statsmodels>=0.12.0
-openpyxl>=3.0.0
-xlrd>=2.0.0
-scikit-learn>=1.0.0
-plotly>=5.0.0
-jupyterlab>=3.0.0
-ipykernel>=6.0.0
-bottleneck>=1.3.0,<2.0.0 
+# 核心数据分析包
+numpy>=1.26.0
+pandas>=2.2.0
+scipy>=1.15.0
+matplotlib>=3.10.0
+seaborn>=0.13.0
+scikit-learn>=1.7.0
 
-lifelines>=0.27.0 
-# (推荐) 细胞质控与注释
-scrublet>=0.2.3
-celltypist>=1.2.0 
-# 核心分析包
-scanpy>=1.9.0
-pandas>=1.5.0
-# 批次校正
-harmonypy>=0.0.5
-# 聚类算法依赖
-python-igraph>=0.10.0
-leidenalg>=0.9.0
+# 单细胞分析
+anndata==0.11.4
+scanpy==1.11.3
+
 # 通路富集分析
-gseapy>=1.0.0
+gseapy==1.1.9
+
+# 生存分析
+lifelines==0.30.0
+statsmodels==0.14.5
+
+# 降维和可视化
+umap-learn==0.5.9.post2
+harmonypy==0.0.10
+
+# 深度学习
+torch==2.7.1
+
+# 数据处理
+h5py==3.14.0
+tqdm==4.67.1
+
+# Jupyter环境
+jupyter>=1.0.0
+ipykernel>=6.0.0 
